--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "element-ui": "^1.4.3",
+    "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
@@ -45,7 +47,7 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "mongoose": "^4.11.9",
+    "mongoose": "^4.10.6",
     "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
