--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "echarts": "^3.8.5",
     "element-ui": "^1.4.3",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
